<resources>
    <string name="app_name">EdualeMobileApp</string>
    <string name="app_title">Bodega Eduale</string>
    <string name="login_usuario">Usuario</string>
    <string name="login_contraseña">Contraseña</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registro_dni">Dni</string>
    <string name="registro_usuario">Usuario</string>
    <string name="registro_contraseña">Contraseña</string>
    <string name="registro_nombre">Nombre</string>
    <string name="registro_apellido">Apellido</string>
    <string name="registro_direccion">Dirección</string>
    <string name="registro_telefono">Teléfono</string>
    <string name="add_cart">Añadir al carrito</string>
    <string name="cart">Carrito</string>
    <string name="product_image">Imagen de producto</string>
    <string name="make_order">Realizar pedido</string>
    <string name="user_information">Información del usuario</string>
    <string name="client_information">Información personal</string>
    <string name="order_information">Pedidos realizados</string>
    <string name="welcome">Bienvenido</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="back">Volver</string>
    <string name="edit_information">Editar información</string>
    <string name="user_img">Imagen de usuario</string>
    <string name="form_names">Nombres: </string>
    <string name="form_lastnames">Apellidos: </string>
    <string name="form_dni">DNI: </string>
    <string name="form_address">Dirección: </string>
    <string name="form_phone">Teléfono: </string>
    <string name="logout">Cerrar sesión</string>
    <string name="home">Home</string>
    <string name="settings">Configuración</string>
    <string name="information">Información</string>
    <string name="actions">Acciones</string>
    <string name="details">Detalles: </string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="nickname">Nickname</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="create_account">¿No se ha registrado? Entra aquí</string>

    <string name="order_history">Historial de pedidos</string>
    <string name="orders">Pedidos</string>
    <string name="product">Producto</string>
    <string name="quantity">Cantidad</string>
    <string name="brand">Marca</string>
    <string name="subtotal">Subtotal</string>
    <string name="save">Guardar cambios</string>
    <string name="date">Fecha: </string>
    <string name="time">Hora: </string>
    <string name="total">Total: S/. </string>

</resources>