<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item android:title="@string/information">
        <menu>
            <item
                android:id="@+id/clientInformation"
                android:title="@string/client_information"
                android:icon="@drawable/ic_personal_information"/>
            <item
                android:id="@+id/userInformation"
                android:title="@string/change_password"
                android:icon="@drawable/ic_lock"/>
            <item
                android:id="@+id/orderInformation"
                android:title="@string/order_information"
                android:icon="@drawable/ic_orders"/>
        </menu>
    </item>

    <item android:title="@string/actions">
        <menu>
            <item
                android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_logout"/>
        </menu>
    </item>
</menu>